gws conversions and dataset processing

--- a/preprocessing/alberto_mat.ipynb
+++ b/preprocessing/alberto_mat.ipynb
@@ -667,6 +667,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 454,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_transposed.to_netcdf(\"alberto_ds.nc\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
