--- a/preprocessing/mosaic_cruise.ipynb
+++ b/preprocessing/mosaic_cruise.ipynb
@@ -18,7 +18,8 @@
     "import os\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from functions import safe_log, convert_datetime"
    ]
   },
   {
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +365,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_ds = convert_datetime(final_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
