ArcticXgboost on new dataframe

--- a/ML_models/arctic_RFs.ipynb
+++ b/ML_models/arctic_RFs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arctic_pkl = '/Users/Lisanne/Documents/AI4ER/Mres/ArcticTurbulence/data/processed_data/ml_ready/arctic2_1805.pkl'\n",
+    "arctic_pkl = '/Users/Lisanne/Documents/AI4ER/Mres/ArcticTurbulence/data/processed_data/ml_ready/0106all.pkl'\n",
     "arctic_df = pd.read_pickle(arctic_pkl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>depth</th>\n",
+       "      <th>profile</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>cruise</th>\n",
+       "      <th>S</th>\n",
+       "      <th>T</th>\n",
+       "      <th>eps</th>\n",
+       "      <th>log_N2</th>\n",
+       "      <th>dTdz</th>\n",
+       "      <th>dSdz</th>\n",
+       "      <th>hab</th>\n",
+       "      <th>Tu</th>\n",
+       "      <th>Tu_label</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4370</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>71.991754</td>\n",
+       "      <td>-143.104116</td>\n",
+       "      <td>ArcticMix</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.008269</td>\n",
+       "      <td>4.783597e-01</td>\n",
+       "      <td>0.012930</td>\n",
+       "      <td>0.000075</td>\n",
+       "      <td>0.000784</td>\n",
+       "      <td>-3086.0</td>\n",
+       "      <td>-45.000079</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-09-04 07:30:33.999997000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4398</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>72.090971</td>\n",
+       "      <td>-143.404364</td>\n",
+       "      <td>ArcticMix</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.077490</td>\n",
+       "      <td>1.604889e-01</td>\n",
+       "      <td>0.013154</td>\n",
+       "      <td>-0.001412</td>\n",
+       "      <td>0.001054</td>\n",
+       "      <td>-3155.0</td>\n",
+       "      <td>-45.000084</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-09-04 15:37:44.000001000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4446</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>70.038279</td>\n",
+       "      <td>-138.757078</td>\n",
+       "      <td>ArcticMix</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.419687</td>\n",
+       "      <td>9.861779e-02</td>\n",
+       "      <td>0.012946</td>\n",
+       "      <td>-0.001492</td>\n",
+       "      <td>0.001278</td>\n",
+       "      <td>-293.0</td>\n",
+       "      <td>-44.986887</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-09-06 14:27:55.999995000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4450</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>70.037240</td>\n",
+       "      <td>-138.798888</td>\n",
+       "      <td>ArcticMix</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.002592</td>\n",
+       "      <td>1.046450e-01</td>\n",
+       "      <td>0.013248</td>\n",
+       "      <td>-0.001652</td>\n",
+       "      <td>0.002142</td>\n",
+       "      <td>-292.0</td>\n",
+       "      <td>-44.991245</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-09-06 15:19:39.999997000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4466</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>70.034487</td>\n",
+       "      <td>-138.990825</td>\n",
+       "      <td>ArcticMix</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.945055</td>\n",
+       "      <td>2.941707e-01</td>\n",
+       "      <td>0.013473</td>\n",
+       "      <td>-0.024856</td>\n",
+       "      <td>0.001659</td>\n",
+       "      <td>-211.0</td>\n",
+       "      <td>-44.985164</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-09-06 18:37:46.000000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172993</th>\n",
+       "      <td>294.0</td>\n",
+       "      <td>1222.0</td>\n",
+       "      <td>82.858403</td>\n",
+       "      <td>21.205757</td>\n",
+       "      <td>NICE</td>\n",
+       "      <td>34.901766</td>\n",
+       "      <td>1.663285</td>\n",
+       "      <td>1.860810e-09</td>\n",
+       "      <td>-5.276694</td>\n",
+       "      <td>-0.004474</td>\n",
+       "      <td>0.000318</td>\n",
+       "      <td>-3066.0</td>\n",
+       "      <td>3.902817</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-03-13 20:02:13.000006144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173579</th>\n",
+       "      <td>295.0</td>\n",
+       "      <td>1220.0</td>\n",
+       "      <td>82.859257</td>\n",
+       "      <td>21.209836</td>\n",
+       "      <td>NICE</td>\n",
+       "      <td>34.901351</td>\n",
+       "      <td>1.682833</td>\n",
+       "      <td>1.605840e-09</td>\n",
+       "      <td>-5.575932</td>\n",
+       "      <td>-0.008181</td>\n",
+       "      <td>0.000293</td>\n",
+       "      <td>-3065.0</td>\n",
+       "      <td>24.409565</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-03-13 19:27:18.000003584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173583</th>\n",
+       "      <td>295.0</td>\n",
+       "      <td>1224.0</td>\n",
+       "      <td>82.830238</td>\n",
+       "      <td>21.109491</td>\n",
+       "      <td>NICE</td>\n",
+       "      <td>34.889531</td>\n",
+       "      <td>1.766879</td>\n",
+       "      <td>1.178926e-09</td>\n",
+       "      <td>-5.730724</td>\n",
+       "      <td>-0.004578</td>\n",
+       "      <td>-0.000166</td>\n",
+       "      <td>-3065.0</td>\n",
+       "      <td>21.079728</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-03-14 19:56:28.000006656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174128</th>\n",
+       "      <td>296.0</td>\n",
+       "      <td>1181.0</td>\n",
+       "      <td>83.132926</td>\n",
+       "      <td>24.148334</td>\n",
+       "      <td>NICE</td>\n",
+       "      <td>34.910785</td>\n",
+       "      <td>1.799373</td>\n",
+       "      <td>1.937594e-09</td>\n",
+       "      <td>-5.621625</td>\n",
+       "      <td>-0.000397</td>\n",
+       "      <td>-0.000049</td>\n",
+       "      <td>-3064.0</td>\n",
+       "      <td>-48.019427</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-03-05 10:22:32.000005888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174716</th>\n",
+       "      <td>297.0</td>\n",
+       "      <td>1181.0</td>\n",
+       "      <td>83.132926</td>\n",
+       "      <td>24.148334</td>\n",
+       "      <td>NICE</td>\n",
+       "      <td>34.911132</td>\n",
+       "      <td>1.799603</td>\n",
+       "      <td>1.682272e-09</td>\n",
+       "      <td>-5.616072</td>\n",
+       "      <td>0.003639</td>\n",
+       "      <td>0.000380</td>\n",
+       "      <td>-3063.0</td>\n",
+       "      <td>-106.109419</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015-03-05 10:22:32.000005888</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>589285 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        depth  profile   latitude   longitude     cruise          S         T  \\\n",
+       "4370      5.0     15.0  71.991754 -143.104116  ArcticMix   0.000000 -0.008269   \n",
+       "4398      5.0     43.0  72.090971 -143.404364  ArcticMix   0.000000 -0.077490   \n",
+       "4446      5.0     91.0  70.038279 -138.757078  ArcticMix   0.000000  3.419687   \n",
+       "4450      5.0     95.0  70.037240 -138.798888  ArcticMix   0.000000  3.002592   \n",
+       "4466      5.0    111.0  70.034487 -138.990825  ArcticMix   0.000000  2.945055   \n",
+       "...       ...      ...        ...         ...        ...        ...       ...   \n",
+       "172993  294.0   1222.0  82.858403   21.205757       NICE  34.901766  1.663285   \n",
+       "173579  295.0   1220.0  82.859257   21.209836       NICE  34.901351  1.682833   \n",
+       "173583  295.0   1224.0  82.830238   21.109491       NICE  34.889531  1.766879   \n",
+       "174128  296.0   1181.0  83.132926   24.148334       NICE  34.910785  1.799373   \n",
+       "174716  297.0   1181.0  83.132926   24.148334       NICE  34.911132  1.799603   \n",
+       "\n",
+       "                 eps    log_N2      dTdz      dSdz     hab          Tu  \\\n",
+       "4370    4.783597e-01  0.012930  0.000075  0.000784 -3086.0  -45.000079   \n",
+       "4398    1.604889e-01  0.013154 -0.001412  0.001054 -3155.0  -45.000084   \n",
+       "4446    9.861779e-02  0.012946 -0.001492  0.001278  -293.0  -44.986887   \n",
+       "4450    1.046450e-01  0.013248 -0.001652  0.002142  -292.0  -44.991245   \n",
+       "4466    2.941707e-01  0.013473 -0.024856  0.001659  -211.0  -44.985164   \n",
+       "...              ...       ...       ...       ...     ...         ...   \n",
+       "172993  1.860810e-09 -5.276694 -0.004474  0.000318 -3066.0    3.902817   \n",
+       "173579  1.605840e-09 -5.575932 -0.008181  0.000293 -3065.0   24.409565   \n",
+       "173583  1.178926e-09 -5.730724 -0.004578 -0.000166 -3065.0   21.079728   \n",
+       "174128  1.937594e-09 -5.621625 -0.000397 -0.000049 -3064.0  -48.019427   \n",
+       "174716  1.682272e-09 -5.616072  0.003639  0.000380 -3063.0 -106.109419   \n",
+       "\n",
+       "        Tu_label                          time  \n",
+       "4370           1 2015-09-04 07:30:33.999997000  \n",
+       "4398           1 2015-09-04 15:37:44.000001000  \n",
+       "4446           2 2015-09-06 14:27:55.999995000  \n",
+       "4450           2 2015-09-06 15:19:39.999997000  \n",
+       "4466           2 2015-09-06 18:37:46.000000000  \n",
+       "...          ...                           ...  \n",
+       "172993         2 2015-03-13 20:02:13.000006144  \n",
+       "173579         2 2015-03-13 19:27:18.000003584  \n",
+       "173583         2 2015-03-14 19:56:28.000006656  \n",
+       "174128         1 2015-03-05 10:22:32.000005888  \n",
+       "174716         0 2015-03-05 10:22:32.000005888  \n",
+       "\n",
+       "[589285 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arctic_df "
    ]
   },
   {
@@ -55,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +452,7 @@
     "\n",
     "        dataframe = encode_tulabel(dataframe)\n",
     "\n",
-    "    dataframe['log_eps'] = dataframe['eps'].apply(lambda x: math.log(x))\n",
+    "    # dataframe['log_eps'] = dataframe['eps'].apply(lambda x: math.log(x))\n",
     "\n",
     "    # stop depth at 300m\n",
     "    dataframe = dataframe[dataframe[\"depth\"] <= 300]\n",
@@ -183,9 +482,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"None of [Index(['log_eps'], dtype='object')] are in the [columns]\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [7], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m# We want to predict:\u001b[39;00m\n\u001b[1;32m      5\u001b[0m ystringlist \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mlog_eps\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m----> 6\u001b[0m pipeline, y_yest, X_test \u001b[39m=\u001b[39m RF_regressor(arctic_df, xstringlist, ystringlist)\n",
+      "Cell \u001b[0;32mIn [6], line 14\u001b[0m, in \u001b[0;36mRF_regressor\u001b[0;34m(dataframe, xfeatures, yfeatures)\u001b[0m\n\u001b[1;32m     11\u001b[0m dataframe \u001b[39m=\u001b[39m dataframe[dataframe[\u001b[39m\"\u001b[39m\u001b[39mdepth\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m]\n\u001b[1;32m     13\u001b[0m x \u001b[39m=\u001b[39m dataframe[xfeatures]\n\u001b[0;32m---> 14\u001b[0m y \u001b[39m=\u001b[39m dataframe[yfeatures]\n\u001b[1;32m     16\u001b[0m \u001b[39m# Split into train and test sets\u001b[39;00m\n\u001b[1;32m     17\u001b[0m SEED \u001b[39m=\u001b[39m \u001b[39m42\u001b[39m\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/gtc/lib/python3.10/site-packages/pandas/core/frame.py:3813\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3811\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3812\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 3813\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[1;32m   3815\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/gtc/lib/python3.10/site-packages/pandas/core/indexes/base.py:6070\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   6067\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   6068\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 6070\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[1;32m   6072\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[1;32m   6073\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[1;32m   6074\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/gtc/lib/python3.10/site-packages/pandas/core/indexes/base.py:6130\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   6128\u001b[0m     \u001b[39mif\u001b[39;00m use_interval_msg:\n\u001b[1;32m   6129\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 6130\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   6132\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[1;32m   6133\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"None of [Index(['log_eps'], dtype='object')] are in the [columns]\""
+     ]
+    }
+   ],
    "source": [
     "# Features:\n",
     "xstringlist = ['S','T','latitude','hab', 'depth','dSdz','dTdz','log_N2', 'Tu_label']\n",
