--- a/data_exploration/load_ds.ipynb
+++ b/data_exploration/load_ds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,18 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "871it [00:02, 416.88it/s]\n",
-      "100%|██████████| 588/588 [00:00<00:00, 653.79it/s]\n",
-      "100%|██████████| 1684/1684 [00:02<00:00, 642.97it/s]\n",
-      "100%|██████████| 78/78 [00:00<00:00, 793.05it/s]\n",
-      "100%|██████████| 351/351 [00:00<00:00, 618.86it/s]\n"
+      "871it [00:07, 122.03it/s]\n",
+      "100%|██████████| 588/588 [00:01<00:00, 350.12it/s]\n",
+      "100%|██████████| 1684/1684 [00:06<00:00, 242.29it/s]\n",
+      "100%|██████████| 78/78 [00:00<00:00, 301.98it/s]\n",
+      "100%|██████████| 351/351 [00:00<00:00, 504.28it/s]\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,23 +173,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mosaic_final[\"log_eps\"] = mosaic_final[\"eps\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "# selected_columns = [\"depth\", \"profile\", \"latitude\", \"longitude\", \"P\", \"S\", \"T\", \"Tu\", \"kappa\", \"log_N2\", \"log_kappa\", \"log_eps\", \"dTdz\", \"dSdz\", \"eps\", \"cruise\", \"hab\", \"Tu_label\", \"time\"]\n",
-    "selected_columns = [\"depth\", \"profile\", \"latitude\", \"longitude\", \"cruise\", \"S\", \"T\", \"eps\", \"log_N2\", \"dTdz\", \"dSdz\", \"hab\", \"Tu\", \"Tu_label\", \"time\"]\n",
+    "selected_columns = [\"depth\", \"profile\", \"latitude\", \"longitude\", \"cruise\", \"S\", \"T\", \"log_eps\", \"log_N2\", \"dTdz\", \"dSdz\", \"hab\", \"Tu\", \"Tu_label\", \"time\"]\n",
     "\n",
     "arctic_f = select_variables(arctic_final, selected_columns)\n",
     "alberto_f = select_variables(alberto_final, selected_columns)\n",
     "mosaic_f = select_variables(mosaic_final, selected_columns)\n",
     "HM_f = select_variables(HM_final, selected_columns)\n",
-    "nice_f = select_variables(nice_selected, selected_columns)"
+    "nice_f = select_variables(nice_final, selected_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +220,7 @@
        "589285"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +257,7 @@
        "array(['ArcticMix', 'HM', 'Mosaic', 'ASBO', 'NICE'], dtype=object)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +313,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [86], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m legend_handles \u001b[39m=\u001b[39m [plt\u001b[39m.\u001b[39mLine2D([], [], linestyle\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mNone\u001b[39m\u001b[39m'\u001b[39m, marker\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mo\u001b[39m\u001b[39m'\u001b[39m, markersize\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mk\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m unique_cruises]\n\u001b[1;32m     31\u001b[0m legend_labels \u001b[39m=\u001b[39m unique_cruises\n\u001b[0;32m---> 33\u001b[0m ax\u001b[39m.\u001b[39;49mlegend(legend_handles, legend_labels, handler_map\u001b[39m=\u001b[39;49m{plt\u001b[39m.\u001b[39;49mLine2D: HandlerPathCollection()}, loc\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcenter left\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m     35\u001b[0m plt\u001b[39m.\u001b[39mshow()\n",
+      "Cell \u001b[0;32mIn [111], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m legend_handles \u001b[39m=\u001b[39m [plt\u001b[39m.\u001b[39mLine2D([], [], linestyle\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mNone\u001b[39m\u001b[39m'\u001b[39m, marker\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mo\u001b[39m\u001b[39m'\u001b[39m, markersize\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mk\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m unique_cruises]\n\u001b[1;32m     31\u001b[0m legend_labels \u001b[39m=\u001b[39m unique_cruises\n\u001b[0;32m---> 33\u001b[0m ax\u001b[39m.\u001b[39;49mlegend(legend_handles, legend_labels, handler_map\u001b[39m=\u001b[39;49m{plt\u001b[39m.\u001b[39;49mLine2D: HandlerPathCollection()}, loc\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcenter left\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m     35\u001b[0m plt\u001b[39m.\u001b[39mshow()\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/gtc/lib/python3.10/site-packages/matplotlib/axes/_axes.py:305\u001b[0m, in \u001b[0;36mAxes.legend\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(extra_args):\n\u001b[1;32m    304\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mlegend only accepts two non-keyword arguments\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m--> 305\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlegend_ \u001b[39m=\u001b[39m mlegend\u001b[39m.\u001b[39;49mLegend(\u001b[39mself\u001b[39;49m, handles, labels, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    306\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlegend_\u001b[39m.\u001b[39m_remove_method \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_remove_legend\n\u001b[1;32m    307\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlegend_\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/gtc/lib/python3.10/site-packages/matplotlib/legend.py:499\u001b[0m, in \u001b[0;36mLegend.__init__\u001b[0;34m(self, parent, handles, labels, loc, numpoints, markerscale, markerfirst, scatterpoints, scatteryoffsets, prop, fontsize, labelcolor, borderpad, labelspacing, handlelength, handleheight, handletextpad, borderaxespad, columnspacing, ncol, mode, fancybox, shadow, title, title_fontsize, framealpha, edgecolor, facecolor, bbox_to_anchor, bbox_transform, frameon, handler_map, title_fontproperties)\u001b[0m\n\u001b[1;32m    496\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_set_artist_props(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlegendPatch)\n\u001b[1;32m    498\u001b[0m \u001b[39m# init with null renderer\u001b[39;00m\n\u001b[0;32m--> 499\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_init_legend_box(handles, labels, markerfirst)\n\u001b[1;32m    501\u001b[0m tmp \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_loc_used_default\n\u001b[1;32m    502\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_set_loc(loc)\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/gtc/lib/python3.10/site-packages/matplotlib/legend.py:780\u001b[0m, in \u001b[0;36mLegend._init_legend_box\u001b[0;34m(self, handles, labels, markerfirst)\u001b[0m\n\u001b[1;32m    777\u001b[0m         text_list\u001b[39m.\u001b[39mappend(textbox\u001b[39m.\u001b[39m_text)\n\u001b[1;32m    778\u001b[0m         \u001b[39m# Create the artist for the legend which represents the\u001b[39;00m\n\u001b[1;32m    779\u001b[0m         \u001b[39m# original artist/handle.\u001b[39;00m\n\u001b[0;32m--> 780\u001b[0m         handle_list\u001b[39m.\u001b[39mappend(handler\u001b[39m.\u001b[39;49mlegend_artist(\u001b[39mself\u001b[39;49m, orig_handle,\n\u001b[1;32m    781\u001b[0m                                                  fontsize, handlebox))\n\u001b[1;32m    782\u001b[0m         handles_and_labels\u001b[39m.\u001b[39mappend((handlebox, textbox))\n\u001b[1;32m    784\u001b[0m \u001b[39mif\u001b[39;00m handles_and_labels:\n\u001b[1;32m    785\u001b[0m     \u001b[39m# We calculate number of rows in each column. The first\u001b[39;00m\n\u001b[1;32m    786\u001b[0m     \u001b[39m# (num_largecol) columns will have (nrows+1) rows, and remaining\u001b[39;00m\n\u001b[1;32m    787\u001b[0m     \u001b[39m# (num_smallcol) columns will have (nrows) rows.\u001b[39;00m\n",
