sys paths and gsw z to pressure

--- a/notebooks/preprocessing/Haakon_Mosby.ipynb
+++ b/notebooks/preprocessing/Haakon_Mosby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,20 +16,24 @@
     "import gsw\n",
     "from scipy.io import loadmat\n",
     "import os\n",
+    "import sys\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "import matplotlib.pyplot as plt\n",
-    "from functions import safe_log"
+    "sys.path.append('../..')\n",
+    "from src.data.functions import safe_log, convert_datetime\n",
+    "from src.utils.directories import get_parent_directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "HM_VMP_nc = \"/Users/Lisanne/Documents/AI4ER/Mres/ArcticTurbulence/data/HM2015617/HM2015617_VMP.nc\"\n",
-    "HM_VMP = xr.open_dataset(HM_VMP_nc)"
+    "parent_dir = get_parent_directory()\n",
+    "HM_nc = os.path.join(parent_dir, \"data/external/Microstructure/HM2015617/HM2015617_VMP.nc\")\n",
+    "HM_ds = xr.open_dataset(HM_nc)"
    ]
   },
   {
@@ -38,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HM_VMP[\"profile\"] = HM_VMP[\"TIME\"].count()"
+    "HM_ds[\"profile\"] = HM_ds[\"TIME\"].count()"
    ]
   },
   {
@@ -47,9 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = HM_VMP\n",
-    "ds['profile'] = xr.DataArray(range(1,len(ds['TIME'])+1), dims='TIME')\n",
-    "ds = ds.swap_dims({'TIME': 'profile'})"
+    "HM_ds['profile'] = xr.DataArray(range(1,len(HM_ds['TIME'])+1), dims='TIME')\n",
+    "HM_ds = HM_ds.swap_dims({'TIME': 'profile'})"
    ]
   },
   {
@@ -71,7 +74,7 @@
    "source": [
     "fig = plt.figure(figsize=(10, 10))\n",
     "ax = fig.add_subplot(1, 1, 1, projection=ccrs.PlateCarree())\n",
-    "ax.scatter(HM_VMP.LONGITUDE, HM_VMP.LATITUDE, transform=ccrs.PlateCarree(), color='red', s=5)\n",
+    "ax.scatter(HM_ds.LONGITUDE, HM_ds.LATITUDE, transform=ccrs.PlateCarree(), color='red', s=5)\n",
     "\n",
     "# Add land, ocean, and borders\n",
     "ax.add_feature(cfeature.LAND.with_scale('50m'))\n",
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +102,7 @@
     }
    ],
    "source": [
-    "ds.TEMP.plot(y = \"DEPTH\", x = \"profile\")\n",
+    "HM_ds.TEMP.plot(y = \"DEPTH\", x = \"profile\")\n",
     "plt.gca().invert_yaxis()"
    ]
   },
@@ -119,23 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "formatted_ds = ds.rename_vars({\"TEMP\": \"T\", \"PSAL\": \"S\", \"HAB\": \"hab\", \"PRES\":\"P\",\n",
+    "formatted_ds = HM_ds.rename_vars({\"TEMP\": \"T\", \"PSAL\": \"S\", \"HAB\": \"hab\", \"PRES\":\"P\",\n",
     "                               \"LATITUDE\": \"latitude\", \"LONGITUDE\": \"longitude\"})\n",
     "formatted_ds = formatted_ds.rename({\"TIME\": \"time\", \"DEPTH\": \"depth\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add an extra dimension for the gamma script in the processing steps\n",
-    "formatted_ds[\"P\"] = formatted_ds.P.expand_dims(dim=\"new_axis\")"
    ]
   },
   {
@@ -160,11 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "formatted_ds.to_netcdf(\"/Users/Lisanne/Documents/AI4ER/Mres/ArcticTurbulence/data/processed_data/HM_ds.nc\")"
+    "# Construct the file path using the parent directory\n",
+    "file_path = os.path.join(parent_dir, \"data\", \"interim\", \"HM_ds.nc\")\n",
+    "formatted_ds.to_netcdf(file_path)"
    ]
   }
  ],
