--- a/notebooks/preprocessing/alberto_mat.ipynb
+++ b/notebooks/preprocessing/alberto_mat.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,21 @@
     "import gsw\n",
     "from scipy.io import loadmat\n",
     "import os\n",
-    "from functions import safe_log"
+    "import sys\n",
+    "sys.path.append('../..')\n",
+    "from src.data.functions import safe_log\n",
+    "from src.utils.directories import get_parent_directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat_nc = \"/Users/Lisanne/Documents/AI4ER/Mres/ArcticTurbulence/data/arctic_microstructure.mat\"\n",
-    "import scipy.io\n",
-    "mat = scipy.io.loadmat(mat_nc)"
+    "parent_dir = get_parent_directory()\n",
+    "mat_nc = os.path.join(parent_dir, \"data/external/Microstructure/arctic_microstructure.mat\")\n",
+    "mat = loadmat(mat_nc)"
    ]
   },
   {
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -149,27 +152,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# dont know if this is still needed\n",
-    "padded_T = np.array([np.pad(arr, (0, depth_len - len(arr)), constant_values=np.nan) for arr in T])\n",
-    "padded_S = np.array([np.pad(arr, (0, depth_len - len(arr)), constant_values=np.nan) for arr in S])\n",
-    "padded_density = np.array([np.pad(arr, (0, depth_len - len(arr)), constant_values=np.nan) for arr in density])\n",
-    "padded_depth = np.array([np.pad(arr, (0, depth_len - len(arr)), constant_values=np.nan) for arr in depth])\n",
-    "padded_N2 = np.array([np.pad(arr, (0, depth_len - len(arr)), constant_values=np.nan) for arr in N2])\n",
-    "padded_eps = np.array([np.pad(arr, (0, depth_len - len(arr)), constant_values=np.nan) for arr in eps])\n",
-    "padded_k = np.array([np.pad(arr, (0, depth_len - len(arr)), constant_values=np.nan) for arr in k])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Convert to xr dataset\n",
     "two dimensions are profile and depth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nn/7hvkdmmn3c15btn2lqvyf2800000gq/T/ipykernel_44336/3638461788.py:4: RuntimeWarning: Mean of empty slice.\n",
+      "/var/folders/nn/7hvkdmmn3c15btn2lqvyf2800000gq/T/ipykernel_26893/3638461788.py:4: RuntimeWarning: Mean of empty slice.\n",
       "  mean = [array[num][digitized == i].mean() for i in range(1, len(bin_edges))]\n",
       "/Users/Lisanne/opt/anaconda3/envs/gtc/lib/python3.10/site-packages/numpy/core/_methods.py:190: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  ret = ret.dtype.type(ret / rcount)\n"
@@ -272,12 +261,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trace back depth as a variable from pressure (how useful?)\n",
-    "ds[\"P\"] = ds.depth # pressure in dbar to z"
+    "# Convert depth (z) to pressure using gsw.p_from_z\n",
+    "ds[\"P\"] = gsw.p_from_z(ds[\"depth\"], ds[\"latitude\"])"
    ]
   },
   {
@@ -289,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,11 +428,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_final.to_netcdf(\"/Users/Lisanne/Documents/AI4ER/Mres/ArcticTurbulence/data/processed_data/alberto_ds.nc\")"
+    "# Construct the file path using the parent directory\n",
+    "file_path = os.path.join(parent_dir, \"data\", \"interim\", \"ASBO-TEACOSI_ds.nc\")\n",
+    "ds_final.to_netcdf(file_path)"
    ]
   },
   {
