changed sys in all notebooks

--- a/notebooks/ML_models/arctic_RFs.ipynb
+++ b/notebooks/ML_models/arctic_RFs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,10 @@
     "plt.rcParams['figure.figsize'] = (10, 10)\n",
     "plt.rcParams.update({'font.size': 14})\n",
     "\n",
-    "from ml_functions import RF_regressor, plot_importances\n",
-    "from visual_func import create_testdf, plot_std_lat, plot_residuals"
+    "sys.path.append('../..')\n",
+    "from src.models.ml_functions import RF_regressor, plot_importances\n",
+    "from src.visualisation.visual_func import create_testdf, plot_std_lat, plot_residuals\n",
+    "from src.utils.directories import get_parent_directory"
    ]
   },
   {
