--- a/notebooks/ML_models/arctic_xgboost.ipynb
+++ b/notebooks/ML_models/arctic_xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,11 @@
     "plt.rcParams['figure.figsize'] = (10, 10)\n",
     "plt.rcParams.update({'font.size': 14})\n",
     "\n",
-    "from ml_functions import RF_regressor, plot_importances, XGBoost_regressor, Tu_label, encode_tulabel, XGBoost_regressor1m, XGBoost_regressor_tuned\n",
-    "from visual_func import create_testdf, plot_std_lat, plot_residuals, stereo_plot\n",
-    "from corr_func import calc_correlation, plot_correlations"
+    "sys.path.append('../..')\n",
+    "from src.models.ml_functions import  RF_regressor, plot_importances, XGBoost_regressor, Tu_label, encode_tulabel, XGBoost_regressor1m, XGBoost_regressor_tuned\n",
+    "from src.visualisation.visual_func import create_testdf, plot_std_lat, plot_residuals, stereo_plot\n",
+    "from src.models.corr_func import calc_correlation, plot_correlations\n",
+    "from src.utils.directories import get_parent_directory"
    ]
   },
   {
