--- a/notebooks/data_exploration/MLD.ipynb
+++ b/notebooks/data_exploration/MLD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,24 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "import matplotlib.pyplot as plt\n",
-    "from processing_func import check_coords, calc_N2_kappa, calc_hab, arctic_calchab\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append('../..')\n",
+    "from src.features.processing_func import check_coords, calc_N2_kappa, calc_hab, arctic_calchab\n",
+    "from src.utils.directories import get_parent_directory\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=RuntimeWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_dir = get_parent_directory()"
    ]
   },
   {
