--- a/notebooks/data_exploration/seaice_feature.ipynb
+++ b/notebooks/data_exploration/seaice_feature.ipynb
@@ -18,20 +18,17 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "import matplotlib.pyplot as plt\n",
-    "from processing_func import check_coords, calc_N2_kappa, calc_hab, arctic_calchab\n",
-    "from calc_seaice import calc_SIC\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append('../..')\n",
+    "from src.features.processing_func import check_coords, calc_N2_kappa, calc_hab, arctic_calchab\n",
+    "from src.utils.directories import get_parent_directory\n",
+    "from src.features.calc_seaice import calc_SIC\n",
+    "\n",
     "import warnings\n",
     "import datetime as datetime\n",
     "warnings.filterwarnings(\"ignore\", category=RuntimeWarning)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from calc_seaice import calc_SIC"
    ]
   },
   {
