--- a/notebooks/data_exploration/turner_angle.ipynb
+++ b/notebooks/data_exploration/turner_angle.ipynb
@@ -18,7 +18,13 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "import matplotlib.pyplot as plt\n",
-    "from processing_func import check_coords, calc_N2_kappa, calc_hab, arctic_calchab\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append('../..')\n",
+    "from src.features.processing_func import check_coords, calc_N2_kappa, calc_hab, arctic_calchab\n",
+    "from src.utils.directories import get_parent_directory\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=RuntimeWarning)"
    ]
