--- a/notebooks/data_exploration/load_ds.ipynb
+++ b/notebooks/data_exploration/load_ds.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asbo_ds[\"log_eps\"] =  np.log10(asbo_ds.eps)\n",
+    "arctic_ds[\"log_eps\"] =  np.log10(arctic_ds.eps)\n",
+    "nice_ds[\"log_eps\"] =  np.log10(nice_ds.eps)\n",
+    "# mosaic already includes eps\n",
+    "mosaic_ds[\"log_eps\"] =  (mosaic_ds.eps)\n",
+    "HM_ds[\"log_eps\"] =  np.log10(HM_ds.eps)\n",
+    "barneo2007_ds[\"log_eps\"] =  np.log10(barneo2007_ds.eps)\n",
+    "barneo2008_ds[\"log_eps\"] =  np.log10(barneo2008_ds.eps)\n",
+    "KB2018616_ds[\"log_eps\"] =  np.log10(KB2018616_ds.eps)\n",
+    "KH2018709_ds[\"log_eps\"] =  np.log10(KH2018709_ds.eps)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,17 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mosaic dataset only includes the log epsilon\n",
-    "mosaic_ds[\"log_eps\"] = mosaic_ds[\"eps\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,19 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "barneo2007_ds = processing_functions(barneo2007_ds, selected_columns, Hadi_SI, bathy_ds)\n",
     "barneo2007_df = barneo2007_ds.to_dataframe().reset_index()\n",
@@ -324,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,10 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
+    "arctic_ds[\"sea_ice_concentration\"] = 0\n",
     "arctic_ds = processing_functions(arctic_ds, selected_columns, Hadi_SI, bathy_ds, True)\n",
     "arctic_df = arctic_ds.to_dataframe().reset_index()\n",
     "arctic_df.to_pickle(os.path.join(parent_dir, \"data/interim/arctic_df.pkl\"))"
@@ -353,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,17 +370,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# due to NaNs, manually adjust\n",
-    "arctic_df.describe()\n",
-    "arctic_df[\"sea_ice_concentration\"] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -393,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
